--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+app.access.key=zion.liliapps.com=Zy4_iW7h5o-4Xn
+
 #-------------------------- Local Dev------------------------------------
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/zion?useTimezone=true&serverTimezone=UTC&useSSL=false
